test-suite/tests/roundtrip/invalid/semantic/typecheck/int_constant_in_bool_expr/int_constnat_in_bool_expr.essence
find x : bool
such that 4 \/ x